samples/_failures_safe/1761391510_a88985_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7b944a0.c: In function ‘main’:
./samples/SAFE/__tmp_d7b944a0.c:181:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  181 |     int token_count
      |     ^~~
./samples/SAFE/__tmp_d7b944a0.c:181:5: error: expected declaration or statement at end of input
